fixed #63 重新重构雇员邀请　#637

--- a/app/views/admins/shops/acounts/shop_info.html.erb
+++ b/app/views/admins/shops/acounts/shop_info.html.erb
@@ -117,6 +117,7 @@
 
 <script type="text/javascript">
   $(function(){
+    <% if can? :manage, @shop %>
     new Upload({
       verify_authenticity_token: "<%=form_authenticity_token %>",
       action: "/user_checkings/upload_photo/",
@@ -129,5 +130,6 @@
         { el: $(".main_panle3"), input_name: "ower_photo", photo: "<%= @user_checking.try(:ower_photo) %>" }
       ]
     })
+    <% end %>
   });
 </script>
