--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -9,7 +9,7 @@
 
 // Active Admin's got SASS!
 //
-@import "twitter/bootstrap.css";
+@import "twitter/bootstrap";
 @import "active_admin/mixins";
 @import "active_admin/base";
 @import "attachments";
