--- a/app/views/people/transactions/funcat/_refund_display.html.erb
+++ b/app/views/people/transactions/funcat/_refund_display.html.erb
@@ -1,3 +1,4 @@
+<% if transaction.refunds.count <= 0 %>
 <div class='container-fluid returned_panel'>
   <div class='span12'>
     <form class="form-horizontal">
@@ -40,3 +41,4 @@
     })
   })
 </script>
+<% end %>
