--- a/app/views/admins/shops/transactions/_close.html.erb
+++ b/app/views/admins/shops/transactions/_close.html.erb
@@ -1,3 +1,4 @@
 <div class="container-fluid">
-	<%= render "products", :transaction => transaction %>
+  <%= render_base_template "refunds", :transaction => transaction %>
+  <%= render "products", :transaction => transaction %>
 </div>
