--- a/app/views/admins/shops/transactions/_waiting_delivery.html.erb
+++ b/app/views/admins/shops/transactions/_waiting_delivery.html.erb
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <%= render_base_template "refunds", :transaction => transaction %>
   <div class="row-fluid">
     <div class="span2 title">
       配送费用
