--- a/app/views/admins/shops/transactions/_waiting_refund.html.erb
+++ b/app/views/admins/shops/transactions/_waiting_refund.html.erb
@@ -1,4 +1,5 @@
 <div class='container-fluid'>
+  <%=render_base_template "refunds", :transaction => transaction %>
   <%=render_base_template "delivery", :transaction => transaction %>
   <%=render_base_template "manner", :transaction => transaction %>
 </div>
