--- a/app/views/people/transactions/_close.html.erb
+++ b/app/views/people/transactions/_close.html.erb
@@ -1,3 +1,4 @@
+<%=render_base_template "refunds", :transaction => transaction %>
 <%=render_base_template "address", :transaction => transaction %>
 <div class='container-fluid'>
   <%= render "products", :transaction => transaction %>
