--- a/app/views/people/transactions/_complete.html.erb
+++ b/app/views/people/transactions/_complete.html.erb
@@ -1,4 +1,5 @@
 <div class='container-fluid'>
+  <%=render_base_template "refunds", :transaction => transaction %>
   <%= render_funcat "refund_display", :locals => {:transaction => transaction} %>
   <%=render_base_template "express_company", :transaction => transaction %>
   <%=render_base_template "manner_and_address", :transaction => transaction %>
