--- a/app/views/people/transactions/_waiting_refund.html.erb
+++ b/app/views/people/transactions/_waiting_refund.html.erb
@@ -1,4 +1,5 @@
 <div class='container-fluid'>
+  <%=render_base_template "refunds", :transaction => transaction %>
   <%=render_base_template "delivery_price", :transaction => transaction %>
   <%=render_base_template "manner_and_address", :transaction => transaction %>
 </div>
