--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -36,12 +36,12 @@
               </p>
             </div>
           </div>
-          <div class='circle_info span8'>
+          <!-- <div class='circle_info span8'>
             <h5>商圈</h5>
             <ul class='circles span12'>
-              <%=render :partial => "circle_item", :collection => @shop.circles %>
+              <%#=render :partial => "circle_item", :collection => @shop.circles %>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
 
