修复商圈的邀请以及modal框可能出现的重叠问题

--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -536,6 +536,13 @@
 }
 
 .follow-users {
+  .alert-info{
+    width: 160px;
+    margin-left: 10px;
+    .href_name{
+      width: 100px;
+    }
+  }
   .follow {
     /*width: 190px;*/
 
