--- a/app/views/application/_topbar.html.erb
+++ b/app/views/application/_topbar.html.erb
@@ -52,7 +52,7 @@
         <% elsif  current_user.is_seller? && !current_user.shop.try(:actived?) %>
           <li>
             <a href="javascript:void(0)" class="create_active" data-keyboard="false">
-              优惠活动(正在审核...)
+              优惠活动(用户资料审核...)
             </a>
           </li>
         <% end %>
