--- a/app/views/circles/_circle.html.erb
+++ b/app/views/circles/_circle.html.erb
@@ -13,7 +13,7 @@
          <span class="label label-warning">群主</span>
       {{else}}
         <div>
-          <span class="label label-warning">已加入</span>
+          <span class="label quit_circle label-warning"  data-value-id="{{ id }}">退出圈子</span>
         <div>
       {{/if}}
     {{ else }}
