--- a/app/assets/stylesheets/shops.css.scss
+++ b/app/assets/stylesheets/shops.css.scss
@@ -25,8 +25,8 @@
     display: inline-block;
     vertical-align: top;
     height: 100%;
-    width: 100px;
-    
+    width: 110px;
+
     img{
       height: 100px;
       width: 100px;
@@ -34,6 +34,11 @@
 
     .page-title{
       margin-top: 0px;
+      text-overflow: ellipsis;
+      word-break: break-word;
+      white-space: nowrap;
+      overflow: hidden;
+      width: 150px;      
     }
 
     .follow, .unfollow{
