移除用户功能，修复部分通知的页面跳转错误问题

--- a/app/views/circles/_circle.html.erb
+++ b/app/views/circles/_circle.html.erb
@@ -10,7 +10,7 @@
             <span class='icon-cog'></span>
           </a>
         </div>
-         <span class="label label-warning">群主</span>
+         <span class="label label-warning"><a href="/people/<%=current_user.login %>/communities/show_members/{{ id }}">管理</a></span>
       {{else}}
         <div>
           <span class="label quit_circle label-warning"  data-value-id="{{ id }}">退出圈子</span>
