--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -538,7 +538,7 @@
 .follow-users {
   .alert-info{
     width: 160px;
-    margin-left: 10px;
+    // margin-left: 10px;
     .href_name{
       width: 100px;
     }
