fixed 加个倒计时显  #691

--- a/app/views/admins/shops/order_refunds/_waiting_sign.html.erb
+++ b/app/views/admins/shops/order_refunds/_waiting_sign.html.erb
@@ -1,4 +1,10 @@
 <div class="container-fluid ">
+   <div class='row-fluid'>
+    <div class='span12'>
+      还有
+      <span class='clock' time="<%= refund.current_state_detail.expired.to_i %>"></span>来确认收货，超时订单自动确认收货
+    </div>
+  </div>
   <div class="row-fluid">
     <div class="span2">
       运输方式
