修复商圈创建失败不报错的bug

--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -1326,7 +1326,7 @@ h2 small {
     border: 1px solid #b94a48;
   }
 }
-input.error {
+select.error, input.error {
   border: 1px solid #b94a48;
 }
 
