--- a/app/assets/stylesheets/admins.scss
+++ b/app/assets/stylesheets/admins.scss
@@ -403,3 +403,10 @@ $left-side-admin-width: 160px;
     }
   }
 }
+
+#admin-side-nav{
+  .avatar_wrap{
+    width: 160px;
+    height: 145px;
+  }
+}
