--- a/app/assets/stylesheets/activity.css.scss
+++ b/app/assets/stylesheets/activity.css.scss
@@ -272,6 +272,9 @@
   }
 
   .circle{
+    margin-bottom: 0px;
+    padding: 1px;
+    
     .circle_info{
       width: 100%;
       margin-left: 0px;
