--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -1794,6 +1794,17 @@ body>.global_chat {
       }
     }
   }
+
+  .search-wrap{
+    .typeahead{
+      li{
+        img.icon{
+          height: 25px;
+          width: 25px;
+        }
+      }
+    }
+  }
 }
 
 .href_name {
