--- a/app/views/circles/_circle.html.erb
+++ b/app/views/circles/_circle.html.erb
@@ -1,4 +1,4 @@
-<div class="span12">
+<div class="row-fluid">
   <div class='photo span5'>
     <img src="{{photos.header}}" data-toggle="tooltip" data-placement="bottom" data-original-title="点击聊天" />
   </div>
