fixed 搜索好友样式变形 #725

--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -808,6 +808,10 @@ ul {
 
 .open_right_side .right-sidebar {
   display: block;
+
+  .wrap_friend{
+    position: absolute;
+  }
 }
 
 .right-sidebar {
