fixed category show html erb 添加搜素条件结果视图绑定

--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -831,6 +831,10 @@ ul {
       position: absolute;
     }
 
+    .fixed_head{
+      margin-left: -5px;
+    }
+
     .filter_key {
       margin: 0px;
       border: none;
