--- a/app/views/people/transactions/base/_delivery_price.html.erb
+++ b/app/views/people/transactions/base/_delivery_price.html.erb
@@ -2,7 +2,7 @@
   <div class="span2 title">
     配送费用
   </div>
-  <div class="span4">
+  <div class="span4 delivery_price">
     <%= number_to_currency(transaction.try(:delivery_price)) %>
   </div>
 </div>
