--- a/app/views/system/order_transactions/_check_info.html.erb
+++ b/app/views/system/order_transactions/_check_info.html.erb
@@ -53,7 +53,7 @@
       </tr>
       <tr>
         <td>配送费用</td>
-        <td><%= @order_transaction.delivery_price %></td>
+        <td class="delivery_price"><%= @order_transaction.delivery_price %></td>
       </tr>
       <tr>
         <td>配送地邮编</td>
