--- a/app/assets/stylesheets/notification.css.scss
+++ b/app/assets/stylesheets/notification.css.scss
@@ -28,6 +28,11 @@
 					width: 20px;
 				}
 			}
+			p{
+				label{
+					cursor: default;
+				}
+			}
 
 			margin-top: 10px;
 			margin-bottom: 10px;
