--- a/app/assets/stylesheets/direct_transaction.css.scss
+++ b/app/assets/stylesheets/direct_transaction.css.scss
@@ -11,6 +11,32 @@
 }
 
 .direct_transactions{
+  .print_display{
+    height: 0px;
+    width: 0px;
+    overflow: hidden;
+  }
+  .transaction-address{
+    margin-top: 30px;
+    .address-form {
+      .controls, .controls-row{
+        margin-left: 90px;
+      }
+      .control-label {
+        width: 80px;
+      }
+
+      .contact_name_wrapper, .contact_phone_wrapper {
+        float: left;
+        width: 50%;
+      }
+
+      input, select {
+        min-height: 100%;
+        height: 30px;
+      }
+    }
+  }
   .direct{
     padding: 8px;
     /*padding: 10px 0px;*/
@@ -77,3 +103,4 @@
     }
   }
 }
+
