--- a/app/views/admins/shops/direct_transactions/_show.html.erb
+++ b/app/views/admins/shops/direct_transactions/_show.html.erb
@@ -18,7 +18,9 @@
           </div>
         </div>
       </div>
-
+      <div class="transaction_address">
+        <P><strong>收货地址： </strong><%=direct_transaction.address.try(:location) || "暂无" %></p>
+      </div>
       <div class='row-fluid'>
         <table class='table table-striped products'>
           <thead>
@@ -28,7 +30,17 @@
               <th>商品</th>
               <th>数量</th>
               <th>单价</th>
-              <th></th>
+              <th class="relative">
+                <div class="btn-group">
+                  <%= link_to 'javascript:void(0)', :class => "btn detials download " do %>
+                    <%= icon :download %>
+                  <% end %>
+                  <%= link_to 'javascript:void(0)', :class => "btn print" do %>
+                    <%= icon :print %>
+                  <% end %>
+                </div>
+                <div class="right-frame"></div>
+              </th>
             </tr>
           </thead>
           <tbody>
@@ -73,6 +85,8 @@
           </h4>
         </div>
       </div>
+      <div class='print_display'>
+      </div>
     </div>
   </div>
   <div class='span5 chat_wrapper'>
@@ -86,3 +100,15 @@
 <% if direct_transaction.operator.nil? %>
   <div class='invalid-full'>接单之后才可以操作订单</div>
 <% end %>
+
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    new OrderExport({
+      url_print: "<%= print_shop_admins_direct_transaction_path(current_shop, direct_transaction) %>",
+      url_download:"<%= shop_admins_direct_transaction_path(current_shop, direct_transaction) %>.csv",
+      order_id: "<%=direct_transaction.id %>",
+      el: $("#direct<%=direct_transaction.id %>")
+    })
+  })
+</script>
