--- a/app/views/admins/shops/transactions/_waiting_audit.html.erb
+++ b/app/views/admins/shops/transactions/_waiting_audit.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <%=render_base_template "delivery_express", :transaction => transaction %>
-  <%=render_base_template "manner", :transaction => transaction %>
+  <%#=render_base_template "manner", :transaction => transaction %>
 </div>
 <div class="container-fluid">
   <%= render "products", :transaction => transaction %>
