--- a/app/assets/stylesheets/people/community_people.css.scss
+++ b/app/assets/stylesheets/people/community_people.css.scss
@@ -126,6 +126,7 @@
       .photo{
         display: inline-block;
         width: 80px;
+        margin-right: 10px;
 
         img{
           height: 80px;
