--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -48,3 +48,4 @@
     <button class="btn btn-primary invite_user shared disabled">邀请</button>
   </div>
 </div>
+<%=render "/people/communities/setting" %>
