--- a/app/views/application/_topbar.html.erb
+++ b/app/views/application/_topbar.html.erb
@@ -24,11 +24,11 @@
                 找商店
               </a>
             </li>
-            <li role="presentation" class='circles' data-value="circles">
+           <!--  <li role="presentation" class='circles' data-value="circles">
               <a role="menuitem" tabindex="-1" href="javascript:void(0)">
                 找商圈
               </a>
-            </li>
+            </li> -->
           </ul>
         </li>
       </ul>      
