--- a/app/views/circles/_circle.html.erb
+++ b/app/views/circles/_circle.html.erb
@@ -1,31 +1,36 @@
 <div class="row-fluid">
-  <div class='photo span5'>
-    <img src="{{photos.header}}" data-toggle="tooltip" data-placement="bottom" data-original-title="点击聊天" />
-  </div>
-  <div class="info span7">
-    {{#if isJoin}}
-      {{#if isOwner}}
-        <div class="pull-right">
-          <a href="#mySetting" role="button" title="设置" data-value-id="{{ id }}" class="setting_load">
-            <span class='icon-cog'></span>
-          </a>
-        </div>
-         <span class="label label-warning"><a href="/people/<%=current_user.login %>/communities/show_members/{{ id }}">管理</a></span>
-      {{else}}
-        <div>
-          <span class="label quit_circle label-warning"  data-value-id="{{ id }}">退出圈子</span>
-        <div>
-      {{/if}}
-    {{ else }}
-      <div>
-        <span data-value-id="{{ id }}" class="label label-warning add_circle">加入</span>
+  {{#if isJoin}}
+    <div class='photo span5'>
+      <img src="{{photos.header}}" data-toggle="tooltip" data-placement="bottom" data-original-title="点击聊天" />
+    </div>
+    <div class="span7">
+    {{#if isOwner}}
+      <div class="pull-right">
+        <a href="#mySetting" role="button" title="设置" data-value-id="{{ id }}" class="setting_load">
+          <span class='icon-cog'></span>
+        </a>
       </div>
-    {{/if }}
-    <div class="group-name" data-name="{{name}}">
-      {{name}}
+       <span class="label label-warning">
+        <a href="/people/<%=current_user.login %>/communities/show_members/{{ id }}">管理</a>
+      </span>
+    {{else}}
+      <div>
+        <span class="label quit_circle label-warning"  data-value-id="{{ id }}">退出圈子</span>
+      </div>
+    {{/if}}
     </div>
-    <div>
-      {{friend_count}} 个成员
+  {{ else }}
+    <div class='photo span5'>
+      <img src="{{photos.header}}" />
     </div>
+    <div class="span7">
+      <span data-value-id="{{ id }}" class="label label-warning add_circle">加入</span>
+    </div>
+  {{/if }}
+  <div class="group-name" data-name="{{name}}">
+    {{name}}
+  </div>
+  <div>
+    {{friend_count}} 个成员
   </div>
 </div>
