--- a/app/views/people/transactions/funcat/_delivery_panel.html.erb
+++ b/app/views/people/transactions/funcat/_delivery_panel.html.erb
@@ -12,7 +12,7 @@
         <li data-value-title="<%=v.title %>" data-value-price="<%=number_to_currency v.price %>">
           <a href="javascript:void(0)">
             <%= v.title %>
-            <span class='pull-right'>
+            <span class="pull-right">
               <%= number_to_currency v.price %>
             </span>
           </a>
