关闭雇员入口

--- a/app/views/admins/shops/employees/index.html.erb
+++ b/app/views/admins/shops/employees/index.html.erb
@@ -3,9 +3,9 @@
 <div class='row-fluid'>
   <div class='employee-groups widget span8'>
 
-    <div class='invite-employee'>
+<!--     <div class='invite-employee'>
       <form class="form-search-user">
-        <input type="hidden" name='authenticity_token' value="<%= form_authenticity_token %>" />
+        <input type="hidden" name='authenticity_token' value="<%#= form_authenticity_token %>" />
         <div class="alert alert-message" style='display:none'>
           <button type="button" class="close" data-dismiss="alert">x</button>
           <p class='content'></p>
@@ -16,7 +16,7 @@
         <input type="text" name='login' autocomplete='off' />
         <button type="submit" class="btn btn-primary">邀请</button>
       </form>
-    </div>
+    </div> -->
 
     <div class='employees'>
       <h4>成员</h4>
