--- a/app/views/admins/shops/transactions/pending.html.erb
+++ b/app/views/admins/shops/transactions/pending.html.erb
@@ -11,14 +11,14 @@
       <table class='table table-striped table-images untransactions'>
         <thead>
           <tr>
-            <th>订单编号</th>
-            <th>买家</th>
-            <th>商品数量</th>
-            <th>总金额</th>
-            <th>下单日期</th>
-            <th>状态</th>
-            <th>地址</th>
-            <th>操作</th>
+            <th style="width:10%">订单编号</th>
+            <th style="width:7%">买家</th>
+            <th style="width:8%">商品数量</th>
+            <th style="width:10%">总金额</th>
+            <th style="width:15%">下单日期</th>
+            <th style="width:10%">状态</th>
+            <th style="width:30%">地址</th>
+            <th style="width:10%">操作</th>
           </tr>
         </thead>
         <tbody>
