--- a/app/assets/stylesheets/direct_transaction.css.scss
+++ b/app/assets/stylesheets/direct_transaction.css.scss
@@ -85,7 +85,7 @@
   }
 
   .chat_wrapper{
-    background: white;
+    // background: white;
     padding: 5px;
     @include box_sizing(border-box);
 
