--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -1625,7 +1625,7 @@ select.error, input.error {
   width: 330px;
   height: 380px;
   z-index: 9999;
-  position: fixed;
+  position: absolute;
 }
 
 .order_chat{
